@@ -1,4 +1,5 @@
 SECTIONS {
 	 .text : { *(.text) } >rom
 	 INCLUDE include-data.t
+	 /DISCARD/ : { *(*) }
 }
