@@ -1,9 +1,9 @@
-	.section .text, "ax", "progbits"
+	.text
 	.4byte 0x11223344
 	.4byte 0x55667788
 	.4byte 0x99aabbcc
 
-	.section .data, "aw", "progbits"
+	.data
 	.4byte 0x01020304
 	.4byte 0x05060708
 	.4byte 0x090a0b0c
